--- a/Web-Project/HTML/Login-Form/index.html
+++ b/Web-Project/HTML/Login-Form/index.html
@@ -2,7 +2,7 @@
     <!DOCTYPE html>    
     <html>    
     <head>    
-        <title>Login Form</title>    
+        <title>Hacktober - 2022 Login Form</title>    
         <link rel="stylesheet" type="text/css" href="css/style.css">    
     </head>    
     <body>    
