Aligned the forgot password button
solved the alignment issue of forgot password button

--- a/Web-Project/HTML/Login-Form/index.html
+++ b/Web-Project/HTML/Login-Form/index.html
@@ -23,8 +23,8 @@
             <br><br>    
             <input type="checkbox" id="check">    
             <span>Remember me</span>    
-            <br><br>    
-            Forgot <a href="#">Password</a>    
+            <br><br>
+            <a class="password" href="#">Forgot Password</a>
         </form>     
     </div>    
     </body>    
