--- a/text animation/index.html
+++ b/text animation/index.html
@@ -2,7 +2,7 @@
   <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello, World!</title>
+    <title>hactoberfest 2022!</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
